--- a/index.html
+++ b/index.html
@@ -135,12 +135,22 @@
                 <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
               </svg>
         </div>
+
+        <div class="hero-2">
+            <div class="hero-description">
+                İzlemeye hazır mısınız? Üye olmak ya da hesabınıza tekrar ulaşmak için tek yapmanız gereken e-posta adresinizi girmek.
+            </div>
+            <div class="hero-buttons">
+                <input type="email" name="email" placeholder="E-posta adresi">
+                <button class="btn btn-red">Başlayın &gt;</button>
+            </div>
+        </div>
+        
     </div>
     <div class="seperation"></div>
 
-
     <footer>
-        <div class="questions">Sorularınız mı var? 0850-390-7444 numaralı telefonu arayın</div>
+        <div class="questions">Sorularınız mı var? <u>0850-390-7444</u> numaralı telefonu arayın</div>
         <div class="footer">
             <div class="footer-item">
                 <a href="">SSS</a>
