--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
         </div>
         <div class="secImg">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="tv">
-            <video class="video1" src="images/video-tv-0819.m4v" autoplay loop></video>
+            <!-- 
+                <video class="video1" autoplay="" playsinline="" muted="" loop=""><source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-0819.m4v" type="video/mp4"></video>
+            -->
+            <video class="video1" type="video/m4v" autoplay loop src="images/video-tv-0819.m4v"></video>
+
         </div>
     </section>
     <div class="seperation"></div>
@@ -79,7 +83,7 @@
         </div>
         <div class="secImg">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile.png" alt="tv">
-            <video class="video2" src="images/video-devices.m4v" autoplay loop ></video>
+            <video class="video2" type="video/m4v" autoplay loop src="images/video-devices.m4v"></video>            
         </div>
     </section>
     <div class="seperation"></div>
